# simple_drone_gazebo

./: CMakeLists.txt  README.md  package.xml
config/: simulation.yaml
launch/: drones.launch.py  spawn_drone.launch.py  start_gz.launch.py
world/: flat.sdf
