<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pisteur_drone_gazebo</name>
  <version>0.0.1</version>
  <description>ROS2 package for simulating drones in a Gazebo environment</description>
  <maintainer email="roulier.mathurin@gmail.com">Mathurin Roulier</maintainer>
  <license>GNU-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>pisteur_drone_description</depend>
  <depend>simple_launch</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
